Update URLs for GitHub Pages, add Formspree, enhance form styling

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         content="konsultant AI, wdrożenia AI, automatyzacja procesów, sztuczna inteligencja dla firm, transformacja cyfrowa, prototypowanie AI, asystent AI, optymalizacja procesów biznesowych">
     <meta name="author" content="Studio.AI">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://studio-ai.pl/">
+    <link rel="canonical" href="https://carmon1985.github.io/szlag/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://studio-ai.pl/">
+    <meta property="og:url" content="https://carmon1985.github.io/szlag/">
     <meta property="og:title" content="Studio.AI | Pragmatyczne wdrożenia AI dla firm">
     <meta property="og:description"
         content="Pomagam firmom wprowadzać AI bez wielkich budżetów IT. Lekkie rozwiązania, szybkie prototypy, realne efekty. 20 lat doświadczenia.">
-    <meta property="og:image" content="https://studio-ai.pl/img/og-image.png">
+    <meta property="og:image" content="https://carmon1985.github.io/szlag/img/og-image.png">
     <meta property="og:locale" content="pl_PL">
     <meta property="og:site_name" content="Studio.AI">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://studio-ai.pl/">
+    <meta name="twitter:url" content="https://carmon1985.github.io/szlag/">
     <meta name="twitter:title" content="Studio.AI | Pragmatyczne wdrożenia AI dla firm">
     <meta name="twitter:description"
         content="Pomagam firmom wprowadzać AI bez wielkich budżetów IT. Lekkie rozwiązania, szybkie prototypy, realne efekty.">
-    <meta name="twitter:image" content="https://studio-ai.pl/img/og-image.png">
+    <meta name="twitter:image" content="https://carmon1985.github.io/szlag/img/og-image.png">
 
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
@@ -40,8 +40,8 @@
         "@type": "ProfessionalService",
         "name": "Studio.AI",
         "description": "Pragmatyczne wdrożenia AI dla firm. Konsultant z 20-letnim doświadczeniem w transformacji cyfrowej.",
-        "url": "https://studio-ai.pl",
-        "logo": "https://studio-ai.pl/img/logo.png",
+        "url": "https://carmon1985.github.io/szlag",
+        "logo": "https://carmon1985.github.io/szlag/img/og-image.png",
         "sameAs": [],
         "address": {
             "@type": "PostalAddress",
@@ -422,8 +422,9 @@
             <!-- 1. Wejdź na https://formspree.io i załóż darmowe konto -->
             <!-- 2. Stwórz nowy formularz i skopiuj ID (np. xyzabcde) -->
             <!-- 3. Wklej ID poniżej zamiast TWOJ_FORMSPREE_ID -->
-            <form action="https://formspree.io/f/TWOJ_FORMSPREE_ID" method="POST"
-                class="text-left bg-white/[0.03] border border-white/5 p-8 md:p-12 rounded-2xl backdrop-blur-sm">
+            <form action="https://formspree.io/f/mqeznaor" method="POST"
+                class="text-left relative overflow-hidden p-8 md:p-12 rounded-2xl backdrop-blur-sm"
+                style="background: linear-gradient(135deg, rgba(30,58,138,0.15) 0%, rgba(5,6,8,0.95) 50%, rgba(127,29,29,0.1) 100%); border: 1px solid rgba(59,130,246,0.2);">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
                     <div class="group">
                         <label class="block text-xs font-mono text-gray-500 uppercase mb-2">Twój Email</label>
