Update URLs to DemokratyzacjaAI repo

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         content="konsultant AI, wdrożenia AI, automatyzacja procesów, sztuczna inteligencja dla firm, transformacja cyfrowa, prototypowanie AI, asystent AI, optymalizacja procesów biznesowych">
     <meta name="author" content="Studio.AI">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://carmon1985.github.io/szlag/">
+    <link rel="canonical" href="https://carmon1985.github.io/DemokratyzacjaAI/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://carmon1985.github.io/szlag/">
+    <meta property="og:url" content="https://carmon1985.github.io/DemokratyzacjaAI/">
     <meta property="og:title" content="Studio.AI | Pragmatyczne wdrożenia AI dla firm">
     <meta property="og:description"
         content="Pomagam firmom wprowadzać AI bez wielkich budżetów IT. Lekkie rozwiązania, szybkie prototypy, realne efekty. 20 lat doświadczenia.">
-    <meta property="og:image" content="https://carmon1985.github.io/szlag/img/og-image.png">
+    <meta property="og:image" content="https://carmon1985.github.io/DemokratyzacjaAI/img/og-image.png">
     <meta property="og:locale" content="pl_PL">
     <meta property="og:site_name" content="Studio.AI">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://carmon1985.github.io/szlag/">
+    <meta name="twitter:url" content="https://carmon1985.github.io/DemokratyzacjaAI/">
     <meta name="twitter:title" content="Studio.AI | Pragmatyczne wdrożenia AI dla firm">
     <meta name="twitter:description"
         content="Pomagam firmom wprowadzać AI bez wielkich budżetów IT. Lekkie rozwiązania, szybkie prototypy, realne efekty.">
-    <meta name="twitter:image" content="https://carmon1985.github.io/szlag/img/og-image.png">
+    <meta name="twitter:image" content="https://carmon1985.github.io/DemokratyzacjaAI/img/og-image.png">
 
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
@@ -40,8 +40,8 @@
         "@type": "ProfessionalService",
         "name": "Studio.AI",
         "description": "Pragmatyczne wdrożenia AI dla firm. Konsultant z 20-letnim doświadczeniem w transformacji cyfrowej.",
-        "url": "https://carmon1985.github.io/szlag",
-        "logo": "https://carmon1985.github.io/szlag/img/og-image.png",
+        "url": "https://carmon1985.github.io/DemokratyzacjaAI",
+        "logo": "https://carmon1985.github.io/DemokratyzacjaAI/img/og-image.png",
         "sameAs": [],
         "address": {
             "@type": "PostalAddress",
