Update form text and dropdown option

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         <option value="overload">Ludzie nie wyrabiają się z pracą</option>
                         <option value="chaos">Toniemy w papierach/mailach</option>
                         <option value="prototype">Chcę sprawdzić pomysł (Prototyp)</option>
-                        <option value="talk">Po prostu pogadać o zmianie</option>
+                        <option value="talk">Porozmawiajmy o kierunku zmian</option>
                     </select>
                 </div>
 
@@ -469,7 +469,7 @@
                 </button>
 
                 <p class="mt-6 text-xs text-center text-gray-600 font-mono">
-                    *Odpisuję osobiście na wybrane, ciekawe przypadki.
+                    Po weryfikacji zgłoszenia skontaktuję się osobiście – mailowo lub telefonicznie.
                 </p>
             </form>
         </div>
