Fix mobile navbar overlap on hero section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative min-h-screen flex flex-col items-center justify-center px-6 pt-20">
+    <section class="relative min-h-screen flex flex-col items-center justify-center px-6 pt-32 md:pt-20">
         <div class="max-w-5xl mx-auto relative z-10 text-center">
 
             <div class="inline-block mb-8">
