--- a/index.html
+++ b/index.html
@@ -417,12 +417,8 @@
                 Nie obiecuję cudów, ale obiecuję szczerość. Jeśli zobaczę, że mogę pomóc "od ręki" moim doświadczeniem i
                 AI – zrobię to, żeby udowodnić, że zmiana nie musi boleć.
             </p>
-
-            <!-- INSTRUKCJA: Zamień TWOJ_FORMSPREE_ID na swój ID z formspree.io -->
-            <!-- 1. Wejdź na https://formspree.io i załóż darmowe konto -->
-            <!-- 2. Stwórz nowy formularz i skopiuj ID (np. xyzabcde) -->
-            <!-- 3. Wklej ID poniżej zamiast TWOJ_FORMSPREE_ID -->
-            <form action="https://formspree.io/f/mqeznaor" method="POST"
+            <!-- Formularz kontaktowy z obsługą AJAX -->
+            <form id="contact-form" action="https://formspree.io/f/mqeznaor" method="POST"
                 class="text-left relative overflow-hidden p-8 md:p-12 rounded-2xl backdrop-blur-sm"
                 style="background: linear-gradient(135deg, rgba(30,58,138,0.15) 0%, rgba(5,6,8,0.95) 50%, rgba(127,29,29,0.1) 100%); border: 1px solid rgba(59,130,246,0.2);">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
@@ -462,18 +458,87 @@
                 <!-- Honeypot - ukryte pole antyspamowe -->
                 <input type="text" name="_gotcha" style="display:none">
 
-                <button type="submit"
+                <button type="submit" id="submit-btn"
                     class="w-full py-5 bg-white hover:bg-gray-200 text-black font-heading font-bold text-lg uppercase tracking-widest transition-colors duration-300 flex justify-center items-center gap-3">
-                    Wyślij do Analizy
-                    <i class="fa-solid fa-hand-holding-heart text-sm"></i>
+                    <span id="btn-text">Wyślij do Analizy</span>
+                    <i class="fa-solid fa-hand-holding-heart text-sm" id="btn-icon"></i>
+                    <svg id="btn-spinner" class="hidden animate-spin h-5 w-5" xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                        </circle>
+                        <path class="opacity-75" fill="currentColor"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
                 </button>
 
                 <p class="mt-6 text-xs text-center text-gray-600 font-mono">
                     Po weryfikacji zgłoszenia skontaktuję się osobiście – mailowo lub telefonicznie.
                 </p>
             </form>
+
+            <!-- Komunikat sukcesu (ukryty domyślnie) -->
+            <div id="success-message" class="hidden text-center p-8 md:p-12 rounded-2xl"
+                style="background: linear-gradient(135deg, rgba(34,197,94,0.15) 0%, rgba(5,6,8,0.95) 50%, rgba(30,58,138,0.1) 100%); border: 1px solid rgba(34,197,94,0.3);">
+                <div class="w-20 h-20 mx-auto mb-6 rounded-full bg-green-500/20 flex items-center justify-center">
+                    <i class="fa-solid fa-check text-green-400 text-3xl"></i>
+                </div>
+                <h3 class="text-2xl font-heading text-white mb-4">Dziękuję za zgłoszenie!</h3>
+                <p class="text-gray-400 mb-6">
+                    Twoja wiadomość dotarła. Przeanalizuję Twój przypadek i skontaktuję się z Tobą osobiście
+                    <br>– mailowo lub telefonicznie.
+                </p>
+                <p class="text-xs text-gray-600 font-mono">
+                    Zazwyczaj odpowiadam w ciągu 24-48 godzin.
+                </p>
+            </div>
         </div>
     </section>
+
+    <!-- Form submission script -->
+    <script>
+        document.getElementById('contact-form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+
+            const form = this;
+            const submitBtn = document.getElementById('submit-btn');
+            const btnText = document.getElementById('btn-text');
+            const btnIcon = document.getElementById('btn-icon');
+            const btnSpinner = document.getElementById('btn-spinner');
+            const successMessage = document.getElementById('success-message');
+
+            // Show loading state
+            btnText.textContent = 'Wysyłanie...';
+            btnIcon.classList.add('hidden');
+            btnSpinner.classList.remove('hidden');
+            submitBtn.disabled = true;
+
+            try {
+                const response = await fetch(form.action, {
+                    method: 'POST',
+                    body: new FormData(form),
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
+
+                if (response.ok) {
+                    // Hide form, show success message
+                    form.classList.add('hidden');
+                    successMessage.classList.remove('hidden');
+                } else {
+                    throw new Error('Błąd wysyłania');
+                }
+            } catch (error) {
+                // Reset button on error
+                btnText.textContent = 'Spróbuj ponownie';
+                btnIcon.classList.remove('hidden');
+                btnSpinner.classList.add('hidden');
+                submitBtn.disabled = false;
+                alert('Wystąpił błąd. Spróbuj ponownie lub napisz bezpośrednio na email.');
+            }
+        });
+    </script>
 
     <footer class="border-t border-white/5 py-12 bg-black text-center">
         <div class="text-xs font-mono text-gray-600 uppercase tracking-widest">
