Add 3 new use cases: RAG, Voicebot, Agent AI

--- a/index.html
+++ b/index.html
@@ -401,6 +401,62 @@
                         </p>
                     </div>
                 </div>
+
+                <!-- Use Case 4: RAG / Baza Wiedzy -->
+                <div
+                    class="premium-card group h-[400px] flex flex-col justify-end p-8 cursor-pointer border-t-2 border-t-purple-500">
+                    <div class="absolute inset-0 z-0">
+                        <img src="img/rag.png"
+                            class="w-full h-full object-cover opacity-50 group-hover:opacity-70 inspire-img transition-opacity duration-500"
+                            alt="Baza wiedzy AI">
+                    </div>
+                    <div class="relative z-10">
+                        <span class="text-xs font-mono text-purple-400 mb-2 block">TWOJA WIEDZA, TWOJE AI</span>
+                        <h3 class="text-2xl font-heading text-white mb-2">Baza Wiedzy (RAG)</h3>
+                        <p
+                            class="text-sm text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-2 group-hover:translate-y-0">
+                            Setki dokumentów, procedur, regulaminów? AI przeczyta je wszystkie i odpowie na pytania
+                            Twoich pracowników. Jakby cała firma miała jedną wspólną pamięć.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Use Case 5: Voicebot -->
+                <div class="premium-card group h-[400px] flex flex-col justify-end p-8 cursor-pointer">
+                    <div class="absolute inset-0 z-0">
+                        <img src="img/voicebot.png"
+                            class="w-full h-full object-cover opacity-50 group-hover:opacity-70 inspire-img transition-opacity duration-500"
+                            alt="Voicebot AI">
+                    </div>
+                    <div class="relative z-10">
+                        <span class="text-xs font-mono text-orange-400 mb-2 block">AI, KTÓRE SŁUCHA</span>
+                        <h3 class="text-2xl font-heading text-white mb-2">Voicebot</h3>
+                        <p
+                            class="text-sm text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-2 group-hover:translate-y-0">
+                            Telefony od klientów rozdzierają? Voicebot odbierze, wysłucha, odpowie lub przekieruje.
+                            Bez kolejek, bez frustracji, 24/7.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Use Case 6: Agent AI -->
+                <div
+                    class="premium-card group h-[400px] flex flex-col justify-end p-8 cursor-pointer border-t-2 border-t-green-500">
+                    <div class="absolute inset-0 z-0">
+                        <img src="img/agent.png"
+                            class="w-full h-full object-cover opacity-50 group-hover:opacity-70 inspire-img transition-opacity duration-500"
+                            alt="Agent AI">
+                    </div>
+                    <div class="relative z-10">
+                        <span class="text-xs font-mono text-green-400 mb-2 block">DZIAŁA SAM</span>
+                        <h3 class="text-2xl font-heading text-white mb-2">Agent AI</h3>
+                        <p
+                            class="text-sm text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-2 group-hover:translate-y-0">
+                            Zlecasz cel – agent rozbija go na zadania i wykonuje sam. Rezerwuje, wysyła, sprawdza,
+                            raportuje. Ty tylko zatwierdzasz wynik.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
