Update Voicebot description - outbound calling focus

--- a/index.html
+++ b/index.html
@@ -429,12 +429,13 @@
                             alt="Voicebot AI">
                     </div>
                     <div class="relative z-10">
-                        <span class="text-xs font-mono text-orange-400 mb-2 block">AI, KTÓRE SŁUCHA</span>
+                        <span class="text-xs font-mono text-orange-400 mb-2 block">GŁOS, KTÓRY NIE MĘCZY</span>
                         <h3 class="text-2xl font-heading text-white mb-2">Voicebot</h3>
                         <p
                             class="text-sm text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-2 group-hover:translate-y-0">
-                            Telefony od klientów rozdzierają? Voicebot odbierze, wysłucha, odpowie lub przekieruje.
-                            Bez kolejek, bez frustracji, 24/7.
+                            Naturalny głos AI – nie do odróżnienia od człowieka. Zadzwoni do tysięcy klientów,
+                            przeprowadzi rozmowę, zbierze informacje. Kampania, która kiedyś trwała tydzień, teraz trwa
+                            godzinę.
                         </p>
                     </div>
                 </div>
