Add Local LLM use case, fix Agent AI description

--- a/index.html
+++ b/index.html
@@ -458,6 +458,26 @@
                         </p>
                     </div>
                 </div>
+
+                <!-- Use Case 7: Local LLM -->
+                <div
+                    class="premium-card group h-[400px] flex flex-col justify-end p-8 cursor-pointer border-t-2 border-t-cyan-500">
+                    <div class="absolute inset-0 z-0">
+                        <img src="img/local-llm.png"
+                            class="w-full h-full object-cover opacity-50 group-hover:opacity-70 inspire-img transition-opacity duration-500"
+                            alt="Lokalne AI">
+                    </div>
+                    <div class="relative z-10">
+                        <span class="text-xs font-mono text-cyan-400 mb-2 block">BEZ CHMURY, BEZ OPŁAT</span>
+                        <h3 class="text-2xl font-heading text-white mb-2">Lokalne AI (LLM)</h3>
+                        <p
+                            class="text-sm text-gray-300 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-2 group-hover:translate-y-0">
+                            Twoje dane nie opuszczają firmy. Darmowy model AI działa na Twoim serwerze – bez
+                            subskrypcji,
+                            bez limitów, bez ryzyka wycieku. Pełna kontrola i prywatność.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
