--- a/en/index.html
+++ b/en/index.html
@@ -603,9 +603,22 @@
         });
     </script>
 
+    <!-- Mobile language switcher (fixed button) -->
+    <a href="../"
+        class="md:hidden fixed bottom-6 right-6 z-50 w-12 h-12 bg-white/10 backdrop-blur-md border border-white/20 rounded-full flex items-center justify-center text-lg hover:bg-white/20 transition-all shadow-lg">
+        🇵🇱
+    </a>
+
     <footer class="border-t border-white/5 py-12 bg-black text-center">
-        <div class="text-xs font-mono text-gray-600 uppercase tracking-widest">
-            &copy; 2024 AI Process Architect. On the human side.
+        <div class="flex flex-col items-center gap-4">
+            <div class="flex gap-4 text-sm">
+                <a href="../" class="text-gray-400 hover:text-white transition-colors">🇵🇱 Polski</a>
+                <span class="text-gray-600">|</span>
+                <a href="./" class="text-white border-b border-white/50">🇬🇧 English</a>
+            </div>
+            <div class="text-xs font-mono text-gray-600 uppercase tracking-widest">
+                &copy; 2024 AI Process Architect. On the human side.
+            </div>
         </div>
     </footer>
 
